<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background"
    android:orientation="vertical"
    tools:context=".FishDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:gravity="start"
                android:textAlignment="gravity"
                android:text="Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameviewfishdetails"
                android:textSize="20sp"
                android:layout_weight="20"/>
            <CheckBox
                android:id="@+id/checkBoxGotFish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isCaught"
                tools:layout_editor_absoluteX="34dp"
                tools:layout_editor_absoluteY="87dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imagedetailsfish"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="40"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="10sp"
                    android:text="@string/uhrzeit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="10sp"
                    android:id="@+id/timedetailfish"
                    android:text="Zeitraum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="10sp"
                    android:text="@string/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="10sp"
                    android:id="@+id/locationdetailfish"
                    android:text="Fundort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="10sp"
                    android:text="@string/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="10sp"
                    android:id="@+id/pricedetailsfish"
                    android:text="Preis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginTop="10sp"
                    android:text="@string/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="10sp"
                    android:id="@+id/sizedetailsfish"
                    android:text="Preis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="10sp"
                android:id="@+id/saison"
                android:text="@string/saison"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <GridLayout
                android:columnCount="4"
                android:rowCount="3"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/januar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/januar"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/februar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/februar"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/märz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/märz"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/april"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/april"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/mai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mai"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/juni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/juni"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/juli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/juli"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/august"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/august"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/september"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/september"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/oktober"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/oktober"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/november"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/november"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
                <TextView
                    android:id="@+id/dezember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dezember"
                    android:layout_columnWeight="66"
                    android:layout_rowWeight="75"
                    android:layout_row="2"
                    android:layout_column="3"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/blackborder"/>
            </GridLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>