<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background"
    android:orientation="vertical"
    tools:context=".FishList">
    <LinearLayout
        android:layout_marginTop="20sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBoxFilterCaughtFish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkboxfiltercaught" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkBoxCurrentFish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkboxcurrent" />
            <CheckBox
                android:id="@+id/checkBoxCatchableTodayFish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkboxtoday" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listFish"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">
    </ListView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/bottombannerviewfish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5899740383904630/5304171414"></com.google.android.gms.ads.AdView>

</LinearLayout>