<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/nook"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:id="@+id/headertxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/txtcon"
                android:gravity="center_horizontal"
                android:textColor="#000000"
                android:textSize="20sp" />

        <GridLayout
            android:columnCount="2"
            android:rowCount="4"
            android:layout_marginTop="50sp"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">
                <ImageButton
                    android:id="@+id/buttonFish"
                    android:scaleType="fitStart"
                    android:background="#0000"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_fishes"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="@string/buttonFish"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">
                <ImageButton
                    android:id="@+id/buttonInsects"
                    android:scaleType="fitStart"
                    android:background="#0000"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_insects"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="12dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="@string/buttonInsects"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">
                <ImageButton
                    android:id="@+id/buttonFossils"
                    android:scaleType="fitStart"
                    android:background="#0000"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_fossile"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="12dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="@string/buttonFossils"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">
                <ImageButton
                    android:id="@+id/buttonFlowers"
                    android:scaleType="fitStart"
                    android:background="#0000"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_flowers"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="12dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="@string/buttonFlowers"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">
                <ImageButton
                    android:id="@+id/buttonSettings"
                    android:scaleType="fitStart"
                    android:background="#0000"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_gear"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="12dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="@string/buttonSettings"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1">
                <ImageButton
                    android:id="@+id/buttonDiscord"
                    android:scaleType="fitStart"
                    android:background="#0000"
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_discord"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="@string/buttonDiscord"/>
            </LinearLayout>

        </GridLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/bottombannerviewmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-5899740383904630/6315139794">

        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</ScrollView>
